UI improvements and export function
Move UI styling to CSS, fix table overflow and add export functions

--- a/templates/bookinfo.htm
+++ b/templates/bookinfo.htm
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Information for {{bookname}}</title>
+		<link rel="stylesheet" href= {{ url_for('static', filename='styles.css') }}>
 		<style>
 			table {
 				margin: 0;
@@ -15,11 +16,11 @@
 		</style>
 	</head>
 	<body>
-		<h1 style="text-align: center;">Information for {{bookname}}</h1>
+		<h1 id="page_title">Information for {{bookname}}</h1>
 		<hr>
 		{% with messages = get_flashed_messages() -%}
 			{% if messages -%}
-			<ul id="indicator" style="background-color: lavender;">
+			<ul id="indicator">
 			{% for message in messages -%}
 				{% if message in ui_translations -%}
 				<li>{{ ui_translations[message][ui_lang] }}</li>
